crates/math-core/src/snapshots/math_core__lexer__tests__unknown_command.snap
---
source: crates/math-core/src/lexer.rs
expression: "\\unknowncmd + x"
---
Error: Unknown command "\unknowncmd".
   ╭─[ <input>:1:1 ]
   │
 1 │ \unknowncmd + x
   │ ─────┬─────  
   │      ╰─────── unknown command
───╯
